Added all files

--- a/doc/src/bib.tex
+++ b/doc/src/bib.tex
@@ -5,5 +5,22 @@
         Wavelet domains}, IJRRAS 11 (3), Czerwiec 2012, (499--516),\\
         \verb+http://www.arpapress.com/volumes/vol11issue3/ijrras_11_3_16.pdf+,\\
         dostęp: 14 grudnia 2016
+        
+    \bibitem{EMD-CNRS}
+        Patrick Flandrin,
+        \textit{Empirical Mode Decomposition}, CNRS \& École Normale Supérieure
+        de Lyon, France,\\
+        \verb+http://perso.ens-lyon.fr/patrick.flandrin/talkDL_EMD12.pdf+,\\
+        dostęp: 14 grudnia 2016
+        
+    \bibitem{HHT}
+        \textit{Hilbert--Huang transform}, Wikipedia,\\
+        \verb+https://en.wikipedia.org/wiki/Hilbert%E2%80%93Huang_transform+,\\
+        dostęp: 14 grudnia 2016
+        
+    \bibitem{EKG-Wiki}
+        \textit{Elektrokardiografia}, Wikipedia,\\
+        \verb+https://pl.wikipedia.org/wiki/Elektrokardiografia+,\\
+        dostęp: 14 grudnia 2016
 
 \end{thebibliography}
