--- a/doc/src/document.tex
+++ b/doc/src/document.tex
@@ -9,6 +9,7 @@
 \usepackage{amsmath}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{enumerate}
 
 \newgeometry{tmargin=2cm, bmargin=2cm, lmargin=2cm, rmargin=2cm}
 
@@ -35,7 +36,7 @@
         i~terapii}}\\[1cm]
         \rule{\textwidth}{1.6pt}\vspace*{-\baselineskip}\vspace*{2pt}
         \rule{\textwidth}{0.4pt}\\[\baselineskip]
-        \Huge{\textsc{Raport I}}
+        \Huge{\textsc{Empirical Mode Decomposition}}
         \rule{\textwidth}{0.4pt}\vspace*{-\baselineskip}\vspace{3.2pt}
         \rule{\textwidth}{1.6pt}\\[\baselineskip]}
         \author{\textit{Autorzy:}\\
@@ -49,6 +50,7 @@
     \tableofcontents
     
     \include{wstep}
+    \include{emd}
     \include{bib}
      
 \end{document}
