Added TeX section files

--- a/doc/src/emd.tex
+++ b/doc/src/emd.tex
@@ -98,12 +98,12 @@ przedstawiony został na rysunku~\ref{fig:sampleimfs}.
 \subsection{Odtwarzanie sygnału EKG}
 \indent
 
-W odtworzenia niezaszumionego sygnału EKG należy zsumować IMF-y niosące ze sobą
-istotne informacje. Wybór odpowiednich IMF-ów jest istotnym czynnikiem
+W celu odtworzenia niezaszumionego sygnału EKG należy zsumować IMF-y niosące ze
+sobą istotne informacje. Wybór odpowiednich IMF-ów jest istotnym czynnikiem
 wpływającym na jakość filtracji. Odrzucenie zbyt wielu składowych spowoduje duże
 zniekształcenie badanego sygnału. Odrzucenie zbyt małej liczby składowych
 niedostatecznie odfiltruje szumy. Zazwyczaj początkowe składowe IMF zawierają
-szum, im wyższy rząd składowej, tym więcej istotnej informacji niesie.
+szum. Im wyższy rząd składowej, tym więcej istotnej informacji ona niesie.
 
 Na rysunku \ref{rys:example_ekg}, przedstawiono przykładowy sygnał EKG
 odfiltrowany metodą EMD dla różnej liczby odrzuconych początkowych składowych
