--- a/doc/src/main.tex
+++ b/doc/src/main.tex
@@ -51,6 +51,8 @@
     
     \include{wstep}
     \include{emd}
+    \include{implementacja}
+    \include{compMatlab}
     \include{bib}
      
 \end{document}
