Added implementation description to doc

--- a/doc/src/bib.tex
+++ b/doc/src/bib.tex
@@ -22,5 +22,15 @@
         \textit{Elektrokardiografia}, Wikipedia,\\
         \verb+https://pl.wikipedia.org/wiki/Elektrokardiografia+,\\
         dostęp: 14 grudnia 2016
+        
+    \bibitem{EKG-DB}
+        \textit{MIT--BIH Arrhythmia Database}, PhysioNet,\\
+        \verb+https://www.physionet.org/physiobank/database/mitdb/+,\\
+        dostęp: 12 stycznia 2016
+        
+    \bibitem{GIT}
+        \textit{ESDMiT}, GitHub,\\
+        \verb+https://gihub.com/ptibbets/ESDMiT+,\\
+        dostęp: 12 stycznia 2016
 
 \end{thebibliography}
