--- a/doc/src/listingi.tex
+++ b/doc/src/listingi.tex
@@ -2,3 +2,13 @@
 
 \lstinputlisting[caption=Funkcja \textit{emd} stworzona w~programie
 \textsc{Matlab}, label=lst:emdm]{../../mat/src/emd.m}
+
+\newpage
+\lstinputlisting[firstline=4, lastline=16, caption=Odpowiednik funkcji
+\textit{diff}, label=lst:diff]{../../cpp/helpers/diff.cpp}
+
+\lstinputlisting[firstline=8, lastline=20, caption=Deklaracja klasy
+\textit{Spline}, label=lst:spline]{../../cpp/helpers/Spline.h}
+
+\lstinputlisting[firstline=8, lastline=20, caption=Deklaracja klasy
+\textit{Spline}, label=lst:peaks]{../../cpp/helpers/Spline.h}
