--- a/doc/src/main.tex
+++ b/doc/src/main.tex
@@ -10,6 +10,7 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{enumerate}
+\usepackage[framed, numbered]{mcode}
 
 \newgeometry{tmargin=2cm, bmargin=2cm, lmargin=2cm, rmargin=2cm}
 
@@ -53,6 +54,7 @@
     \include{emd}
     \include{implementacja}
     \include{compMatlab}
+    \include{listingi}
     \include{bib}
      
 \end{document}
