--- a/doc/src/emd.tex
+++ b/doc/src/emd.tex
@@ -81,6 +81,9 @@ przedstawić przy pomocy sumy:
     x[n] = \sum\limits_{i = 1}^L c_i[n] + r_L[n]
 \end{equation}
 
+Realizacja powyższego algorytmu w~programie \textsc{Matlab} przedstawiona
+została na listingu~\ref{lst:emdm}.
+
 \newpage
 
 Przykładowy sygnał ECG rozłożony na trzy składowe IMFs oraz resztę $r_3$
