Deleted unnecessary listings

--- a/doc/src/implementacja.tex
+++ b/doc/src/implementacja.tex
@@ -32,8 +32,7 @@ w~wektorze. Analogicznie jak w~programie \textsc{Matlab}, nazwana ona została
 \textit{diff}. Przedstawiona ona została na listingu~\ref{lst:diff}. Inną
 brakującą funkcjonalnością było poszukiwanie lokalnych maksimów i~minimów
 funkcji, której kolejne wartości zawarte byłyby w~wektorze --~funkcja
-\textit{findpeaks} w~programie \textsc{Matlab}. Odpowiedni kod wykonujący
-identyczną operację przedstawiony został na listingu~\ref{lst:peaks}.
+\textit{findpeaks} w~programie \textsc{Matlab}.
 
 Bibilioteka \textit{Eigen} posiada realizację funkcji sklejanych, lecz w~związku
 z~jej nadmiernym rozbudowaniem w~stosunku do wymagań projektu, została ona
