Added information about filtering

--- a/doc/src/emd.tex
+++ b/doc/src/emd.tex
@@ -99,6 +99,7 @@ przedstawiony został na rysunku~\ref{fig:sampleimfs}.
 \newpage
 
 \subsection{Odtwarzanie sygnału EKG}
+\label{sec:filtrMatlab}
 \indent
 
 W celu odtworzenia niezaszumionego sygnału EKG należy zsumować IMF-y niosące ze
