--- a/doc/src/listingi.tex
+++ b/doc/src/listingi.tex
@@ -4,8 +4,14 @@
 \textsc{Matlab}, label=lst:emdm]{../../mat/src/emd.m}
 
 \newpage
-\lstinputlisting[firstline=4, lastline=16, caption=Odpowiednik funkcji
+\lstinputlisting[breaklines=true, language=C++, keywordstyle=\color{blue},
+firstline=4, lastline=16, caption=Odpowiednik funkcji
 \textit{diff}, label=lst:diff]{../../cpp/helpers/diff.cpp}
 
-\lstinputlisting[firstline=8, lastline=20, caption=Deklaracja klasy
+\lstinputlisting[breaklines=true, language=C++, keywordstyle=\color{blue},
+firstline=8, lastline=20, caption=Deklaracja klasy
 \textit{Spline}, label=lst:spline]{../../cpp/helpers/Spline.h}
+
+\lstinputlisting[breaklines=true, language=C++, keywordstyle=\color{blue},
+firstline=4, lastline=19, caption=Funkcja odtwarzająca odfiltrowany sygnał EKG,
+label=lst:filterCpp]{../../cpp/filter.cpp}
