--- a/doc/src/main.tex
+++ b/doc/src/main.tex
@@ -11,6 +11,7 @@
 \usepackage{subcaption}
 \usepackage{enumerate}
 \usepackage[framed, numbered]{mcode}
+\usepackage{listings}
 
 \newgeometry{tmargin=2cm, bmargin=2cm, lmargin=2cm, rmargin=2cm}
 
