--- a/doc/src/compMatlab.tex
+++ b/doc/src/compMatlab.tex
@@ -12,7 +12,8 @@ odpowiednio dla usuniętego 1 i 2-óch IMF-ów.
         {../img/mat_cpp_domp_d1.pdf}
     \end{center}
     \caption{Porównanie działania filtracji implementacji \textrm{MATLAB} i
-    \textit{C++} przy odrzuceniu 1 IMF-a}
+    \textit{C++} przy odrzuceniu 1 IMF-a (Czas wykonania: \textrm{MATLAB} : 1534
+    [ms], \textit{C++}: 126 [ms])}
     \label{rys:comp_d1}
 \end{figure}
 
@@ -34,7 +35,9 @@ rysunku \ref{rys:comp_spline}.
         {../img/mat_cpp_domp_d2.pdf}
     \end{center}
     \caption{Porównanie działania filtracji implementacji \textrm{MATLAB} i
-    \textit{C++} przy odrzuceniu 2 IMF-ów}
+    \textit{C++} przy odrzuceniu 2 IMF-ów (Czas wykonania: \textrm{MATLAB} :
+    1523 [ms],
+    \textit{C++}: 130 [ms])}
     \label{rys:comp_d2}
 \end{figure}
 
